--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,8 @@ jobs:
     name: Backup
 
     steps:
+      - uses: actions/checkout@v2
+
       - name: Download
         shell: bash
         run: download-code.sh
