--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -39,4 +39,5 @@ jobs:
           BACKUP_GITHUB_OWNER: ${{ secrets.BACKUP_GITHUB_OWNER }}
           BACKUP_AWS_REGION: ${{ secrets.BACKUP_AWS_REGION }}
           BACKUP_BUCKET_NAME: ${{ secrets.BACKUP_BUCKET_NAME }}
-        run: backup-organisation-code
+        run: |
+          backup-organisation-code.sh
