Changed worfkflow without docker

--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -1,4 +1,9 @@
 name: Backup
+env:
+  BACKUP_GITHUB_PAT: ${{ secrets.BACKUP_GITHUB_PAT }}
+  BACKUP_GITHUB_OWNER: ${{ secrets.BACKUP_GITHUB_OWNER }}
+  BACKUP_AWS_REGION: ${{ secrets.BACKUP_AWS_REGION }}
+  BACKUP_BUCKET_NAME: ${{ secrets.BACKUP_BUCKET_NAME }}
 
 on:
   workflow_dispatch:
@@ -19,7 +24,6 @@ permissions:
 jobs:
   Backup:
     runs-on: ubuntu-latest
-    container: ghcr.io/dms-jovan-stanoevski/githubbackup:main
     name: Backup
 
     steps:
@@ -34,10 +38,64 @@ jobs:
 
       - name: Backup
         shell: bash {0}
-        env:
-          BACKUP_GITHUB_PAT: ${{ secrets.BACKUP_GITHUB_PAT }}
-          BACKUP_GITHUB_OWNER: ${{ secrets.BACKUP_GITHUB_OWNER }}
-          BACKUP_AWS_REGION: ${{ secrets.BACKUP_AWS_REGION }}
-          BACKUP_BUCKET_NAME: ${{ secrets.BACKUP_BUCKET_NAME }}
-        run: |
-          backup-organisation-code
+        run: |          
+          # https://gist.github.com/mohanpedala/1e2ff5661761d3abd0385e8223e16425
+          #set -euxo pipefail
+
+          echo "Logging in with personal access token."
+          export GH_TOKEN=$BACKUP_GITHUB_PAT
+          gh auth setup-git
+          
+          echo "Downloading repositories for" $BACKUP_GITHUB_OWNER
+
+          gh repo list $BACKUP_GITHUB_OWNER --json "name" --limit 1000 --template '{{range .}}{{ .name }}{{"\n"}}{{end}}' | xargs -L1 -I {} git clone --mirror https://${BACKUP_GITHUB_OWNER}:{BACKUP_GITHUB_PAT}@github.com/$BACKUP_GITHUB_OWNER/{} 
+
+          for f in */; do mkdir -p $f/.git; done
+
+          for d in *; do echo "$d"; cp -avr $d/* $d/.git; done
+
+          echo "Downloaded repositories..."
+          find  . -maxdepth 1 -type d
+
+          echo "Uploading to S3 bucket" $BACKUP_BUCKET_NAME "in region" $BACKUP_AWS_REGION
+          aws s3 sync --region=$BACKUP_AWS_REGION . s3://$BACKUP_BUCKET_NAME/github.com/$BACKUP_GITHUB_OWNER/`date "+%Y-%m-%d"`/
+
+          echo $?
+
+          echo "Complete."
+
+          #aws s3 cp s3://$BACKUP_BUCKET_NAME/github.com/$BACKUP_GITHUB_OWNER/`date "+%Y-%m-%d"`/ . --recursive
+
+          repository_name_list="$(gh repo list $BACKUP_GITHUB_OWNER --json "name" --limit 1000 --template '{{range .}}{{ .name }}{{"\n"}}{{end}}')"
+          echo $repository_name_list
+          for output_repo_list in $repository_name_list
+        do
+          git config --global --add safe.directory /github/workspace
+          git config --global credential.'https://git-codecommit.*.amazonaws.com'.helper '!aws codecommit credential-helper $@'
+          git config --global credential.helper '!aws codecommit credential-helper $@'
+          git config --global credential.UseHttpPath true
+          output_json="$(aws codecommit get-repository --repository-name "$BACKUP_GITHUB_OWNER"-"$output_repo_list")"
+          echo $output_json | grep "RepositoryDoesNotExistException"
+          if [ $? -ne '0' ];
+            then
+            output_json="$(aws codecommit create-repository --repository-name "$BACKUP_GITHUB_OWNER"-"$output_repo_list" --repository-description "$output_repo_list")"
+          fi;
+        echo $output_json
+          if [ $? -ne '0' ];
+            then
+            echo "Could not create repository $repository_name"
+          exit 1
+         fi;
+        output_json="$(aws codecommit get-repository --repository-name "$BACKUP_GITHUB_OWNER"-"$output_repo_list")"
+        clone_url="$(echo "$output_json" | python3 -c "import sys, json; print(json.load(sys.stdin)['repositoryMetadata']['cloneUrlHttp'])")"
+	      echo $clone_url
+        clone_repository_name="$(echo "$output_json" | python3 -c "import sys, json; print(json.load(sys.stdin)['repositoryMetadata']['repositoryDescription'])").git"
+        echo $clone_repository_name
+        cd $clone_repository_name
+        git remote add sync $clone_url
+        git config --unset core.bare
+        git reset --hard
+        git push sync --mirror
+        cd ..
+      done
+#Complete
